--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 :root {
   --navbar-color: #5ec401;
   --primary-color: #fe1717;
   --secondary-color: #ff5e00;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
+/* Apply font-mono globally */
 body {
+  @apply font-mono;
   margin: 0;
 }
